Project

General

Profile

Actions

Bug #11270

closed

libipp-listener: strtok() can return NULL and we do leak open file

Added by Toomas Soome over 3 years ago. Updated over 3 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
lib - userland libraries
Start date:
Due date:
% Done:

100%

Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
External Bug:

Description

We need to check the strtok() return value. Also drop #ifndef linux around that code.

This issue was pointed by Gergő Mihály Doma while reviewing: https://illumos.org/rb/r/1955/


Related issues

Related to illumos gate - Bug #11170: print: NULL pointer errorsClosedToomas Soome

Actions
Actions #1

Updated by Toomas Soome over 3 years ago

  • Subject changed from libipp-listener: strtok() can return NULL to libipp-listener: strtok() can return NULL and we do leak open file
Actions #2

Updated by Toomas Soome over 3 years ago

  • Description updated (diff)
Actions #3

Updated by Toomas Soome over 3 years ago

  • Related to Bug #11170: print: NULL pointer errors added
Actions #4

Updated by Electric Monk over 3 years ago

  • Status changed from In Progress to Closed
  • % Done changed from 90 to 100

git commit 082e84855d5f07c088beac66080cad0b6e1dadc3

commit  082e84855d5f07c088beac66080cad0b6e1dadc3
Author: Toomas Soome <tsoome@me.com>
Date:   2019-06-27T20:12:09.000Z

    11270 libipp-listener: strtok() can return NULL and we do leak open file
    Reviewed by: Gergő Mihály Doma <domag02@gmail.com>
    Reviewed by: Norm Jacobs <naj@snapcon.com>
    Approved by: Dan McDonald <danmcd@joyent.com>

Actions

Also available in: Atom PDF