11270 libipp-listener: strtok() can return NULL and we do leak open file Reviewed by: Gergő Mihály Doma <domag02@gmail.com> Reviewed by: Norm Jacobs <naj@snapcon.com> Approved by: Dan McDonald <danmcd@joyent.com>